# zkdb-plonky2

./: .gitignore  Cargo.toml  Dockerfile  README.md  report.md  start.sh
benchmark_results/12297ea3-47f5-4471-95ad-6752318ac4ee/: 0bc420a0-a8a3-44a4-811a-ddcc475e693b.json  68db0034-c3f9-45e2-9875-8ec23c7a5507.json  8818d14d-4d40-48f2-a038-708ab558d24a.json  9125c820-4ce7-4b24-9c24-e1ef79a6e706.json  a4e66229-f573-4e75-9b78-17965309e49b.json  abebb2fd-66cf-4c09-81df-61062dda2e44.json  afc44977-7076-4a4f-9581-fbc0b296ebee.json  c91e0e00-1098-4529-b33d-acb02bdcf299.json  manifest.json
benchmark_results/1accb8db-6fa3-4bf9-9940-809df681d2a6/: 0a4a65a2-e8e9-4c8d-ac1a-03d611c880d5.json  0f20df43-a0eb-4348-a466-a1e0f09ae984.json  0f7a59bc-50ee-4615-907c-78da2961e935.json  38663f31-dbe2-42ca-8246-7556255df70a.json  3b54ff8f-23d4-4504-a405-63d8e389f11c.json  4099c373-a897-4857-a2d0-23be630539d9.json  45b713c4-4715-4e25-97b9-eb8a95e9119d.json  468566a3-f8c6-4532-9b55-9b10e0ef877d.json  48cfddee-eabe-4915-bbf1-d86c952cb628.json  4be19bb9-2802-4113-a26c-ffceb9e5708d.json  6d71f145-d57c-4bb6-b02a-cfb54ccbafe9.json  775227cd-b046-4a9c-9353-eb136e4d5030.json  88ccc880-312d-47b5-ae2b-d9ce2beecd96.json  8f7beabe-2a4e-42b3-8080-1e0a0ba23c64.json  93624c48-9b0b-440a-824d-32efbfe71583.json  95736e0d-d615-4725-b728-5f4ebbd878a5.json  be5c1a8e-c9ef-4f32-80d7-f778fe12aa4f.json  manifest.json  (+5 more)
frontend/: next.config.ts  package-lock.json
src/: field.rs  lib.rs  main.rs  types.rs
tests/: adversarial.rs  benchmark_integration.rs  debug.rs  operator_integration.rs  plonky2_integration.rs
(+224 files in other folders)
